9.0 - 
Removed support for netstandard1.1 and netstandard1.6
Removed WithLocalizedMessage (WithMessage that takes a callback is the replacement)
Removed ResourceName from ValidationFailure
Removed ResourceName and ResourceType from IStringSource.
Removed SetCollectionValidator which was deprecated in 8.0
Additional overload of OnAnyFailure that can receive a collection of validation failures

8.5.1 - 2 November 2019
Ensure lazily loaded calls to WithMessage can be used for client-side validation, provided they don't attempt to access model properties from inside the delegate (eg when using IStringLocalizer).
Fix issue where OnFailure didn't work properly when invoked on validators with conditions.

8.5.0 - 24 September 2019
Add ASP.NET Core-compatible version of the email address validator.
Simplify the advanced testhelper syntax.
Add support for ASP.NET Core 3.
Add support for defining child rules inline.
ValidatorDescriptor now has consistent handling of model-level rules.
RuleForEach can now access collection index in error message with {CollectionIndex} placeholder.
Welsh language translations of default error messages.
Hungrian language translations of default error messages.
Indonesian language translations of default error messages.
Using RuleForEach combined with When is now more intuitive.
Fixed order of rule execution when using async validation.

8.4.0 - 10 May 2019
Added simplified version of several messages across all translations to aid with ASP.NET Clientside validation.
New enum validator for string properties.

8.3.0 - 24 April 2019
Fix issue in ASP.NET Core integration with GetServiceProvider not working correctly when invoked against a CustomContext/MessageBuilderContext.
Improved how LanguageStringSource works with error-code overrides.
Fix thread-safety issue with use of PropertyValidatorOptions.Empty (now removed).
Improved how calls to When/Unless are handled internally.
DelegatingValidator is now marked as deprecated.